# smllr

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  celery.Dockerfile  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
k8s/: deployment.yaml  ingress-route.yaml  kind-config.yaml  namespace.yaml  service.yaml
k8s/traefik/: values.yaml
scripts/: deploy.sh  entrypoint.sh  setup-cluster.sh
smllr/: __init__.py  asgi.py  cache.py  celery.py  health.py  settings.py  urls.py  wsgi.py
smllr/core/: apps.py  response.py
smllr/core/templatetags/: smllr_core.py
smllr/fingerprint/: admin.py  apps.py  middlewares.py  models.py  parser.py  tests.py
smllr/fingerprint/migrations/: 0001_initial.py  0002_fingerprint_browser_name_fingerprint_browser_version_and_more.py  0003_fingerprint_user_agent.py  0004_alter_fingerprint_user_agent.py
smllr/shorturls/: admin.py  analytics.py  api.py  apps.py  context_processors.py  forms.py  generator.py  helpers.py  middlewares.py  models.py  tasks.py  tests.py  tracking.py  urls.py  users.py  views.py
smllr/shorturls/migrations/: 0001_initial.py  0002_alter_shorturl_short_code.py  0002_initial.py  0003_shorturl_name.py  0003_shorturlclick.py  0004_shorturlclick_fingerprint.py  (+4 more)
smllr/subscriptions/: apps.py  manager.py  mixins.py  urls.py  views.py
smllr/users/: adapters.py  admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py
terraform/: .gitignore  container_registry.tf  database.tf  droplet-init  droplet.tf  project.tf  vars.tf
(+21 files in other folders)
