[project]
name = "smllr-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.1",
    "django-allauth[socialaccount]>=65.8.1",
    "gunicorn>=23.0.0",
    "httpagentparser>=1.9.5",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "redis>=6.4.0",
    "stripe>=13.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
